To get a detailed version history, please view:

    *doc/release_notes.rst*