@@ -1,2 +1,0 @@
-include *.txt
-recursive-include docs *.txt
